[package]
name = "ibus"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
v1_5_3 = []
v1_5_4 = ["v1_5_3", "ffi/v1_5_3"]
v1_5_18 = ["v1_5_4", "ffi/v1_5_4"]
v1_5_29 = ["v1_5_18", "ffi/v1_5_18"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ffi = { package = "ibus-sys", path = "./sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2"

[workspace]
members = ["sys"]
exclude = ["gir", "gir-files"]
