[package]
name = "ibus-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.ibus_1_0]
name = "ibus-1.0"
version = "1"

[package.metadata.system-deps.ibus_1_0.v1_5_3]
version = "1.5.3"

[package.metadata.system-deps.ibus_1_0.v1_5_4]
version = "1.5.4"

[package.metadata.system-deps.ibus_1_0.v1_5_18]
version = "1.5.18"

[package.metadata.system-deps.ibus_1_0.v1_5_29]
version = "1.5.29"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "ibus_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_5_3 = []
v1_5_4 = ["v1_5_3"]
v1_5_18 = ["v1_5_4"]
v1_5_29 = ["v1_5_18"]
